mariadb-generic/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mariadb
  name: mariadb-service
  namespace: generic
spec:
  ports:
    - name: "3306"
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: mariadb
  sessionAffinity: None
  type: ClusterIP
